smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/invalid-unicode-escape.smithy
// Parse error at line 4, column 21 near `)\n`: Invalid unclosed unicode escape found in string
namespace smithy.example

@documentation("\ua")
string MyString
